--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
 }
-
 //argumentos
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
@@ -17,12 +16,12 @@ android.buildFeatures.viewBinding true
 
 android {
     namespace 'com.example.sem08'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.sem08"
         minSdk 27
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -42,27 +41,34 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'com.google.firebase:firebase-bom:31.1.1'
+    implementation platform ('com.google.firebase:firebase-bom:31.0.2')
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    annotationProcessor 'androidx.room:room-compiler:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
-    implementation 'androidx.room:room-ktx:2.4.3'
+    //Expression DAO Entity Database
+   // annotationProcessor 'androidx.room:room-compiler:2.4.3'
+   // kapt 'androidx.room:room-compiler:2.4.3'
+   // implementation 'androidx.room:room-ktx:2.4.3'
 
+    //Firebase firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 }
