--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,11 @@ dependencies {
 
     //Firebase firestore
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
+    //GitHub
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor'com.github.bumptech.glide:compiler:4.13.0'
 }
